# build_your_own_lisp_in_rust

./: Cargo.toml  README.md
libs/: prelude.lspy
src/: environment.rs  error.rs  expression.rs  function.rs  lib.rs  main.rs  parser.rs  repl.rs  validation.rs
src/expression/: function.rs  ir.rs
