[package]
name = "lispy"
version = "0.1.0"
authors = ["htk16 <armor_hiking@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
anyhow = "1.0.31"
itertools = "0.9.0"
lazy_static = "1.4.0"
phf = { version = "0.8.0", features = ["macros"] }
