[package]
name = "lispy"
version = "0.15.0"
authors = ["htk16 <armor_hiking@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
itertools = "0.9.0"
phf = { version = "0.8.0", features = ["macros"] }
regex = "1.3.9"
combine = "4.2.1"
structopt = "0.3.16"
